tests/machine/x/c/in_operator.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/in_operator.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/in_operator.c:30:38: error: incompatible type for argument 1 of ‘contains_array_int’
   30 |   printf("%d\n", (contains_array_int(xs, 3, 2)) ? "true" : "false");
      |                                      ^~
      |                                      |
      |                                      list_int
/workspace/mochi/tests/machine/x/c/in_operator.c:19:36: note: expected ‘int *’ but argument is of type ‘list_int’
   19 | static int contains_array_int(int *arr, int len, int item) {
      |                               ~~~~~^~~
/workspace/mochi/tests/machine/x/c/in_operator.c:31:41: error: incompatible type for argument 1 of ‘contains_array_int’
   31 |   printf("%d\n", ((!(contains_array_int(xs, 3, 5)))) ? "true" : "false");
      |                                         ^~
      |                                         |
      |                                         list_int
/workspace/mochi/tests/machine/x/c/in_operator.c:19:36: note: expected ‘int *’ but argument is of type ‘list_int’
   19 | static int contains_array_int(int *arr, int len, int item) {
      |                               ~~~~~^~~

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:50Z
