tests/machine/x/c/in_operator.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:50Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static int contains_array_int(int *arr, int len, int item) {
  for (int i = 0; i < len; i++)
    if (arr[i] == item)
      return 1;
  return 0;
}
int main() {
  list_int xs = list_int_create(3);
  xs.data[0] = 1;
  xs.data[1] = 2;
  xs.data[2] = 3;
  printf("%d\n", (contains_array_int(xs, 3, 2)) ? "true" : "false");
  printf("%d\n", ((!(contains_array_int(xs, 3, 5)))) ? "true" : "false");
  return 0;
}
